# AOL-AI

./: .gitignore  handoff.md
.github/workflows/: daily_sync.yml
backend/: main.py  pyproject.toml  run_pipeline.py  test_ml_pipeline.py
backend/.env/: .env.example
backend/app/: main.py
backend/app/api/routers/: events.py  keywords.py  players.py  skins.py  webhooks.py
backend/app/api/schemas/: skin.py
backend/app/core/: config.py  logger.py  utils.py
backend/app/core/database/: supabase.py
backend/app/ml/: data_prep.py  lstm_predictor.py  predictor.py
backend/app/services/: csfloat.py  gemini.py  pipeline.py  steam.py
backend/migrations/: 001_initial_schema.sql  002_ai_predictions_model_unique.sql
backend/notebooks/: Preprocessing_and_EDA.ipynb
backend/tests/: test_ml_pipeline.py  test_services.py
frontend/app/: layout.tsx
frontend/app/(app)/: page.tsx
frontend/app/(app)/events/: page.tsx
frontend/app/(app)/history/[id]/: page.tsx
frontend/app/(app)/keywords/: page.tsx
frontend/app/(app)/predictor/: page.tsx
frontend/app/(app)/predictor/[id]/: page.tsx
frontend/components/cs2/: AiAnalysisCard.tsx  EventTimeline.tsx  KeywordTracker.tsx  PlayerCountWidget.tsx  PricePredictorChart.tsx
frontend/components/layout/: BottomTabBar.tsx  NavItem.tsx  Sidebar.tsx
frontend/lib/: api.ts  cs2-mock-data.ts  cs2-types.ts
